--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -22,7 +22,7 @@
 
 <body>
  <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-   <a class="navbar-brand" href="#">Mój blog</a>
+   <a class="navbar-brand" href="{{ url_for('index') }}">Mój blog</a>
    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
      aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
      <span class="navbar-toggler-icon"></span>
@@ -31,6 +31,15 @@
    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
      <ul class="navbar-nav mr-auto">
      </ul>
+
+     {% if session.logged_in %}
+       <form class="form-inline my-2 my-lg-0" action="{{ url_for('logout') }}" method="POST">
+         <button class="btn btn-secondary my-2 my-sm-0 mr-2" type="submit">Wyloguj</button>
+       </form>
+     {% else %}
+       <a href="{{ url_for('login') }}" class="btn btn-secondary my-2 my-lg-0 mr-2">Zaloguj</a>
+     {% endif %}
+
      <form class="form-inline my-2 my-lg-0">
        <input class="form-control mr-sm-2" type="text" placeholder="Szukaj" aria-label="Szukaj">
        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Szukaj</button>
@@ -43,19 +52,20 @@
    {% block content %}
    {% endblock %}
 
-     {% with messages = get_flashed_messages(with_categories=true) %}
-  {% if messages %}
-    <div>
-      {% for category, message in messages %}
-        <div class="alert alert-{{ category }}" role="alert">
-          {{ message }}
-        </div>
-      {% endfor %}
-    </div>
-  {% endif %}
-{% endwith %}
+   {% with messages = get_flashed_messages(with_categories=true) %}
+     {% if messages %}
+       <div>
+         {% for category, message in messages %}
+           <div class="alert alert-{{ category }}" role="alert">
+             {{ message }}
+           </div>
+         {% endfor %}
+       </div>
+     {% endif %}
+   {% endwith %}
 
  </main><!-- /.container -->
+
  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
    crossorigin="anonymous"></script>
@@ -65,5 +75,7 @@
  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
    crossorigin="anonymous"></script>
+
+</body>
 
 </html>
